k8s/quarkus/quarkus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus
  namespace: student-j-donnerbauer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus
  template:
    metadata:
      labels:
        app: quarkus
    spec:
      containers:
        - name: quarkus
          image: registry.cloud.htl-leonding.ac.at/j.donnerbauer/quarkus:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: database
        - name: init-script
          configMap:
            name: mysql-setup
            items:
              - key: wait.sh
                path: wait.sh
            defaultMode: 0744
      imagePullSecrets:
        - name: leocloudcredentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: student-j-donnerbauer
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mysql
  template:
    metadata:
      labels:
        component: mysql
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: database
        - name: init-script
          configMap:
            name: mysql-setup
            items:
              - key: create.sql
                path: create.sql
      containers:
        - name: mysql
          image: mysql:8
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "400m"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: student-j-donnerbauer
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  selector:
    component: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: quarkus
  namespace: student-j-donnerbauer
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: quarkus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-ingress
  namespace: student-j-donnerbauer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /j.donnerbauer/backend(/|$)(.*)$
            pathType: Prefix
            backend:
              service:
                name: quarkus
                port:
                  number: 80
